// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders App correctly after addNewName is called 1`] = `
<div>
  <h1
    id="app-title"
  >
    hello random name picker
  </h1>
  <div>
    <ul>
      <Name
        isLucky={false}
        name="gordon"
      />
      <Name
        isLucky={false}
        name="sahil"
      />
      <Name
        isLucky={false}
        name="david"
      />
      <Name
        isLucky={false}
        name="sally"
      />
      <Name
        isLucky={false}
        name="jane"
      />
      <Name
        isLucky={false}
        name="alice"
      />
      <Name
        isLucky={false}
        name="Christmas"
      />
    </ul>
    <RandomButton
      handleClick={[Function]}
    />
  </div>
  <InputForm
    addName={[Function]}
  />
</div>
`;

exports[`renders App correctly after handleClick is called 1`] = `
<div>
  <h1
    id="app-title"
  >
    hello random name picker
  </h1>
  <div>
    <ul>
      <Name
        isLucky={false}
        name="gordon"
      />
      <Name
        isLucky={false}
        name="sahil"
      />
      <Name
        isLucky={true}
        name="david"
      />
      <Name
        isLucky={false}
        name="sally"
      />
      <Name
        isLucky={false}
        name="jane"
      />
      <Name
        isLucky={false}
        name="alice"
      />
    </ul>
    <RandomButton
      handleClick={[Function]}
    />
  </div>
  <InputForm
    addName={[Function]}
  />
</div>
`;

exports[`renders App without crashing 1`] = `
<div>
  <h1
    id="app-title"
  >
    hello random name picker
  </h1>
  <div>
    <ul>
      <Name
        isLucky={false}
        name="gordon"
      />
      <Name
        isLucky={false}
        name="sahil"
      />
      <Name
        isLucky={false}
        name="david"
      />
      <Name
        isLucky={false}
        name="sally"
      />
      <Name
        isLucky={false}
        name="jane"
      />
      <Name
        isLucky={false}
        name="alice"
      />
    </ul>
    <RandomButton
      handleClick={[Function]}
    />
  </div>
  <InputForm
    addName={[Function]}
  />
</div>
`;
